<resources>
    <string name="app_name">suvorov-andrey-shop</string>
    <string name="checkout_header">Оформление заказа</string>
    <string name="checkout_card">Картой при получении</string>
    <string name="checkout_cash">Наличными</string>
    <string name="checkout_selectBuy">Выберите способ оплаты:</string>
    <string name="checkout_buy">Оплатить</string>
    <string name="checkout_surname">Фамилия</string>
    <string name="checkOut_name">Имя</string>
    <string name="checkout_middleName">Отчество</string>
    <string name="checkout_phone">Телефон</string>
    <string name="checkout_productsInBasket">Товаров в корзине на сумму:</string>
    <string name="checkout_totalPriceWithSale">Сумма к оплате:</string>
    <string name="checkout_sale">Скидка составила:</string>
    <string name="checkout_phone_hint">Пример, 89999999999 или +79999999999</string>
    <string name="catalog_products">Каталог товаров</string>
    <string name="information_about_product">Информация о товаре</string>
    <string name="basket">Корзина</string>
    <string name="place_order">Оформить заказ</string>
    <string name="add_in_basket">Добавить в корзину</string>
    <string name="about_product_name">Наименование товара</string>
    <string name="discount_text">Скидка:</string>
    <string name="url_server">http://207.254.71.167:9191</string>
    <string name="no_connect_internet">Отсутствует подключение к интернету</string>
    <string name="no_connect_server">Нет связи с сервером</string>
</resources>
