<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/checkOutTotalPriceWithSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/checkOutTextTotalPriceWithSale"
                app:layout_constraintStart_toStartOf="@+id/checkout_sale"
                app:layout_constraintTop_toTopOf="@+id/checkOutTextTotalPriceWithSale"
                tools:text="800 р" />

            <TextView
                android:id="@+id/checkOutTextTotalPriceWithSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/checkout_totalPriceWithSale"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/checkOutTextProductsInBasket"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/checkOutTextProductsInBasket"
                app:layout_constraintTop_toBottomOf="@+id/checkOutTextSale" />

            <TextView
                android:id="@+id/checkOutTextSale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/checkout_sale"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/checkOutTextProductsInBasket"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/checkOutTextProductsInBasket"
                app:layout_constraintTop_toBottomOf="@+id/checkOutTextProductsInBasket" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkOutSelectBuy">

                <RadioButton
                    android:id="@+id/checkOutCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_card" />

                <RadioButton
                    android:id="@+id/checkOutCash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkout_cash" />

            </RadioGroup>

            <EditText
                android:id="@+id/checkOutTelephone"
                android:layout_width="347dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/checkout_phone"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkOutMiddleName" />

            <Button
                android:id="@+id/checkoutPay"
                android:layout_width="289dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="#6689EE"
                android:text="@string/checkout_buy"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <EditText
                android:id="@+id/checkOutSurname"
                android:layout_width="347dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:hint="@string/checkout_surname"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkoutHeader" />

            <TextView
                android:id="@+id/checkoutSumValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/checkOutTextProductsInBasket"
                app:layout_constraintStart_toEndOf="@+id/checkOutTextProductsInBasket"
                app:layout_constraintTop_toTopOf="@+id/checkOutTextProductsInBasket"
                tools:text="1000 Р" />

            <EditText
                android:id="@+id/checkOutMiddleName"
                android:layout_width="347dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/checkout_middleName"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkOutName" />

            <TextView
                android:id="@+id/checkOutSelectBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:text="@string/checkout_selectBuy"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkOutTextTotalPriceWithSale" />

            <EditText
                android:id="@+id/checkOutName"
                android:layout_width="347dp"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:hint="@string/checkOut_name"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkOutSurname" />

            <TextView
                android:id="@+id/checkout_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/checkOutTextSale"
                app:layout_constraintStart_toStartOf="@+id/checkoutSumValue"
                app:layout_constraintTop_toTopOf="@+id/checkOutTextSale"
                tools:text="200 р" />

            <TextView
                android:id="@+id/checkoutHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:text="@string/checkout_header"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/checkOutTextProductsInBasket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:text="@string/checkout_productsInBasket"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkOutTelephone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>